# coperC

./: .gitignore  CMakeLists.txt  README.md  README.txt  coperC.sln  foo.vim
coperC/: coperC.vcxproj  coperC.vcxproj.filters
coperC/include/: ConfigFileItem.h  ConfigParser.h  FileCoper.h  Status.h  Utils.h  analyzer.h  assembling.cpp  assembling.h  config_file_loader.h  coper.h  debug.hpp  file_handler.h  fold_file_loader.h  folder_file_validation.h  grammar_analyzer.h  interactive_controller.h  lexical_analyzer.h  parameter_parser.h
coperC/src/: ConfigFileItem.cpp  ConfigFileParser.cpp  ConfigParser.cpp  FileCoper.cpp  Status.cpp  Utils.cpp  analyzer.cpp  analyzer.h  assembling.cpp  config_file_loader.cpp  coper.cpp  coper.h  file_handler.cpp  file_handler.h  fold_file_loader.cpp  folder_file_validation.cpp  grammar_analyzer.cpp  interactive_analyzer.cpp  interactive_controller.cpp  interactive_controller.h  lexical_analyzer.cpp  main.cpp  main2.cpp  parameter_parser.cpp
coperC/x64/Debug/: vc140.idb
coperC/x64/Debug/coperC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  coperC.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
external-includes/cllib/: include
